﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.13...]
### 2019-02-11
	Fixed: Per rule log adjusts was not saved if disabled.
### 2019-02-10
	Changed: I/O priority requires `IO Priority=true` in [Experimental] in Core.ini.
	Added: I/O priority is now in experiment config dialog and in watchlist rule editor.
	Fixed: Watchlist search now clears itself on timer as intended.
	Added: Ctrl-Backspace now tries to clear text to last whitespace character instead of printing weird character.
	Changed: Unrecognized control characters are now ignored instead of being added to the search as garbage symbols.
	Changed: Self-affinity no longer accepts negative numbers.
	Fixed: Self-priority was not applied at start-up.
	Added: Rule ordering. Watchlist now has `Preference´ setting which defaults to 10. Lower order rules are processed first.
		Rules are sorted internally from time to time using small number of criteria.
		Rules with same order fall back to the other criteria to determine final order (e.g. rules with high adjust count will be sorted earlier).
	Changed: New instances are added to scan block list for 5 seconds to avoid some odd things happenings.
	Fixed: I/O priority was saved incorrectly in UI if set to ignore.
	Changed: Rule controller is refreshed if it's modified during runtime.
	Changed: If foreground monitor is active, it will ensure foreground apps have normal I/O priority.
### 2019-02-09
	Internal: Hiding some things to not be usable where they shouldn't.
	Added: I/O priority control. Watchlist.ini now has `IO priority` setting. This may be inherited, so care needs to be taken when applying it to launchers.
		Valid values are 0 = background, 1 = low, 2 = normal.
### 2019-02-07
	Fixed: Affinity ideal nor Log adjusts settings were not saved across restarts when set in UI.
### 2019-02-05
	Changed: Exclusive mode error handling.
	Changed: Power mode reporting clarified.